# rust_project

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  nixpacks.toml  railway.toml
src/: bot.rs  config.rs  error.rs  main.rs  password.rs
